--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -16,7 +16,7 @@
 
   Here is an image: 
 
-  ![image of embroidery](./sew.png)
+  ![image of embroidery](./Hydrangea-PNG-Transparent-Picture.png)
 
   And here is a	[link](../index.html). 
 
