Updating html, adding text and the hydrangea picture

--- a/About_Me/index.html
+++ b/About_Me/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYSCI 70: Intro to Digital Fabrication </title>
+<title>PHYS-S-12: Intro to Digital Fabrication: About Me </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
 
@@ -12,13 +12,13 @@
 
 
 
-  ### Week 1: Introduction 
+  ### About Me 
 
-  Here is an image: 
+  Abi Adam is a high school student from Toronto, Canada. She spends her time volunteer tutoring, teaching swimming, lifeguarding, and teaching skiing. However, her real passion is for the physical sciences and broadening the horizons of human knowledge through analysis and investigation. She is a voracious reader, always trying to learn new things and apply what she learns to her daily life. Her hobbies include visual art (drawing, painting, sculpture), creative writing, swimming, skiing, and participating in a wide variety of after-school clubs. Abi loves branching out into new areas and exploring fields totally outside her area of interest, as she really values well-roundedness and is possessed of an insatiable curiosity. She is beyond excited to dive into learning in this class and break out of her comfort zone whilst learning and applying new things in the supportive environment the class provides.  
 
-  ![image of embroidery](./Hydrangea-PNG-Transparent-Picture.png)
+  ![image of a hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
-  And here is a	[link](../index.html). 
+  If you want to go back to the main page:	[link](../index.html). 
 
 
 </xmp>
