Making the second link work

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 
 <div class="container-fluid bg-3 text-center">
   
+
+
   <div class="row">
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
       [Week 1: Introduction](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 2: 2D Design and Cutting](./02_2D Design and Cutting/index.html)
+      ![sewing image](./Hydrangea-PNG-Transparent-Picture.png) 
+      
+      [Week 2: 2D Design and Cutting](./02_2_Design_and_Cutting/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
