Changing titles and changing images

--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -12,11 +12,11 @@
 
 
 
-  ### Week 2: 2D Design and Cutting
+  ### Week 5: 3D Design and Printing
 
   Here is an image: 
 
-  ![image of embroidery](./sew.png)
+  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
   And here is a	[link](../index.html).
 
