--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYSCI 70: Intro to Digital Fabrication </title>
+<title>PHYS-S-12: Intro to Digital Fabrication - Abi Adam </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
 
@@ -10,13 +10,11 @@
 
 <xmp theme="journal" style="display:none;">
 
-
-
   ### Week 2: 2D Design and Cutting
 
   Here is an image: 
 
-  ![image of embroidery](./sew.png)
+  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
   And here is a	[link](../index.html).
 
