--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYSCI 70: Intro to Digital Fabrication </title>
+<title>PHYS-S-12: Intro to Digital Fabrication - Abi Adam </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
@@ -14,37 +14,82 @@
 <div class="container-fluid bg-3 text-center">
   
 
-
   <div class="row">
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
       [Week 1: Introduction](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      ![sewing image](./Hydrangea-PNG-Transparent-Picture.png) 
-      
-      [Week 2: 2D Design and Cutting](./02_2_Design_and_Cutting/index.html)
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      [Week 2: 2D Design and Cutting](./02_2D_Design_and_Cutting/index.html)
     </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      [Week 3: Electronics and Tools](./03_Electronics_and_Tools/index.html)
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      [Week 4: Microcontroller Programming](./04_Microcontroller_Programming/index.html)
     </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      [Week 5: 3D Design & Printing](./05_3D_Design_and_Printing/index.html)
     </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      [Week 6: 6: Electronic Input Devices](./06_Electronic_Input_Devices/index.html)
     </div>
   </div>
+
+   <div class="row">
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 7: Electronic Output Devices](./07_Electronic_Output_Devices/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 8: CNC Milling, Molding & Casting](./08_CNC_Milling,_Molding_&_Casting/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png)  
+      [Week 9: Radio, WiFi, Bluetooth (IoT)](./09_Radio,_Wifi,_Bluetooth_(IoT)/index.html)
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-4">
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png)  
+      [Week 10: Machine Building and End Effectors](./10_Machine_Building_and_End_Effectors/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      [Week 11: Wildcard, Machines](./11_Wildcard,_Macines/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      [Week 12: Project Prep (lab)](./12_Project_Prep_(lab)/index.html)
+    </div>
+  </div>
+
+   <div class="row">
+    <div class="col-sm-4">
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      [Week 13: Final Project](./13_Final_Project/index.html)
+    </div>
+    <div class="col-sm-4">
+     ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      [About Me](./About_Me/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      [Filler?]
+    </div>
+  </div>
+
+
 </div>
 </div>
 
