--- a/index.html
+++ b/index.html
@@ -47,13 +47,11 @@
 
    <div class="row">
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png)  
       [Week 7: Electronic Output Devices](./07_Electronic_Output_Devices/index.html)
     </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      
+      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
       [Week 8: CNC Milling, Molding & Casting](./08_CNC_Milling,_Molding_&_Casting/index.html)
     </div>
     <div class="col-sm-4">
