--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <div class="col-sm-4">
       ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
-      
+
       [Week 8: CNC Milling, Molding & Casting](./08_CNC_Milling,_Molding_&_Casting/index.html)
     </div>
     <div class="col-sm-4">
@@ -83,7 +83,8 @@
       [Week 13: Final Project](./13_Final_Project/index.html)
     </div>
     <div class="col-sm-4">
-     ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+     ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png)
+     ![picture of me](./About_Me.jpeg)
       [About Me](./About_Me/index.html)
     </div>
     <div class="col-sm-4">
