--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYSCI 70: Intro to Digital Fabrication </title>
+<title>PHYS-S-12: INTRO TO DIGITAL FABRICATION - ABI ADAM</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
 
@@ -14,9 +14,9 @@
 
   ### Week 1: Introduction 
 
-  Here is an image: 
+  For the first week I worked on this website. 
 
-  ![image of embroidery](./Hydrangea-PNG-Transparent-Picture.png)
+  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
   And here is a	[link](../index.html). 
 
