Changing names and misc.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <div class="col-sm-4">
       ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
-      [Week 12: Project Prep (lab)](./12_Project_Prep_(lab)/index.html)
+      [Week 12: Project Prep (lab)](./12_Project_Prep_lab/index.html)
     </div>
   </div>
 
