removing brackets from names

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="col-sm-4">
       ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
-      [Week 6: 6: Electronic Input Devices](./06_Electronic_Input_Devices/index.html)
+      [Week 6: Electronic Input Devices](./06_Electronic_Input_Devices/index.html)
     </div>
   </div>
 
@@ -58,7 +58,7 @@
     </div>
     <div class="col-sm-4">
       ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png)  
-      [Week 9: Radio, WiFi, Bluetooth (IoT)](./09_Radio,_Wifi,_Bluetooth_(IoT)/index.html)
+      [Week 9: Radio, WiFi, Bluetooth (IoT)](./09_Radio,_Wifi,_Bluetooth_IoT/index.html)
     </div>
   </div>
 
