making the pictures work?

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -14,7 +14,7 @@
 
   ### Week 1: Introduction 
 
-  For the first week I worked on this website. 
+  Here is an image: 
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
