--- a/06_Electronic_Input_Devices/index.html
+++ b/06_Electronic_Input_Devices/index.html
@@ -12,11 +12,11 @@
 
 
 
-  ### Week 2: 2D Design and Cutting
+  ### Week 6: Electronic Input Devices
 
   Here is an image: 
 
-  ![image of embroidery](./sew.png)
+  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
   And here is a	[link](../index.html).
 
