Changing images and names to ensure accuracy

--- a/10_Machine_Building_and_End_Effectors/index.html
+++ b/10_Machine_Building_and_End_Effectors/index.html
@@ -12,13 +12,13 @@
 
 
 
-  ### Week 2: 2D Design and Cutting
+  ### Week 10: Machine Building and End Effectors
 
   Here is an image: 
 
-  ![image of embroidery](./sew.png)
+  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
-  And here is a	[link](../index.html).
+  And here is a [link](../index.html).
 
 
 
