--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -12,13 +12,13 @@
 
 
 
-  ### Week 2: 2D Design and Cutting
+  ### Week 7: Electronic Output Devices
 
   Here is an image: 
 
-  ![image of embroidery](./sew.png)
+  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
-  And here is a	[link](../index.html).
+  And here is a [link](../index.html).
 
 
 
