--- a/09_Radio,_Wifi,_Bluetooth_IoT/index.html
+++ b/09_Radio,_Wifi,_Bluetooth_IoT/index.html
@@ -12,13 +12,13 @@
 
 
 
-  ### Week 2: 2D Design and Cutting
+  ### Week 9: Radio, Wifi, Bluetooth Iot
 
   Here is an image: 
 
-  ![image of embroidery](./sew.png)
+  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
-  And here is a	[link](../index.html).
+  And here is a [link](../index.html).
 
 
 
