Replacing with new flowers

--- a/index.html
+++ b/index.html
@@ -20,66 +20,66 @@
       [Week 1: Introduction](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      ![white tulip image](./WhiteTulip.jpg) 
 
       [Week 2: 2D Design and Cutting](./02_2D_Design_and_Cutting/index.html)
     </div>
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      ![red hydrangea image](./RedHydrangea.png) 
       [Week 3: Electronics and Tools](./03_Electronics_and_Tools/index.html)
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      ![yellow rose image](./YellowRose.jpg) 
       [Week 4: Microcontroller Programming](./04_Microcontroller_Programming/index.html)
     </div>
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      ![blue flowers image](./BlueFlowers.jpg) 
       [Week 5: 3D Design & Printing](./05_3D_Design_and_Printing/index.html)
     </div>
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      ![pink bouquet image](./PinkyBouquet.jpg) 
       [Week 6: Electronic Input Devices](./06_Electronic_Input_Devices/index.html)
     </div>
   </div>
 
    <div class="row">
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png)
+      ![red flower image](./RedFlowers2X.jpg)
 
       [Week 7: Electronic Output Devices](./07_Electronic_Output_Devices/index.html)
     </div>
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      ![ballet pink flower image](./LigtBalletPinkFlower.jpg) 
 
       [Week 8: CNC Milling, Molding & Casting](./08_CNC_Milling,_Molding_&_Casting/index.html)
     </div>
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png)  
+      ![striped pink tulip image](./StripyPinkTulip.jpg)  
       [Week 9: Radio, WiFi, Bluetooth (IoT)](./09_Radio,_Wifi,_Bluetooth_IoT/index.html)
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png)  
+      ![brown flower image](./BrownFlower.jpg)  
       [Week 10: Machine Building and End Effectors](./10_Machine_Building_and_End_Effectors/index.html)
     </div>
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      ![white rose image](./WhiteRose.png) 
       [Week 11: Wildcard, Machines](./11_Wildcard,_Macines/index.html)
     </div>
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      ![purple striped tulip image](./WhitePurpleStripedTulip.jpg) 
       [Week 12: Project Prep (lab)](./12_Project_Prep_lab/index.html)
     </div>
   </div>
 
    <div class="row">
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      ![yellow sunflower image](./YellowSunflower.jpg) 
       [Week 13: Final Project](./13_Final_Project/index.html)
     </div>
     <div class="col-sm-4">
