--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       [Week 1: Introduction](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      ![white tulip image](./WhiteTulip.jpg) 
 
       [Week 2: 2D Design and Cutting](./02_2D_Design_and_Cutting/index.html)
     </div>
