adding final project proposal

--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -14,11 +14,22 @@
 
   ### Week 13: Final Project
 
-  Here is an image: 
+  For my final project I am considering the following idea: 
 
-  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
+  Light/heat operated musical instrument
 
-  And here is a [link](../index.html).
+  A musical instrument built using photoresistors/thermisters to detect the location of the user's fingers, allowing them to play varied notes without needing to touch an instrument. They would be able to play chords and varying intensities of the notes. The instrument would also be able to change octaves and have a display to show the user what chord/note they are playing. 
+
+  Here is a (very simple) illustration of what I hope to create: 
+
+   It would utilize an Arduino and breadboarding, as well as code likely executed in MatLab. This project is basically a more complex version of a more rudimentary project I created last year that follows the same concept (a musical instrument operated based on the varied detection of light/heat from disparate sources). 
+
+  Here are images of the (very rudimentary) version I created for that project: 
+ 
+
+  ![image of initial version](./CompSciFST2021.jpg)
+
+  Click [here](../index.html) to go back to the home page.
 
 
 
