adding new image/editing text

--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -22,9 +22,11 @@
 
   Here is a (very simple) illustration of what I hope to create: 
 
+  ![Sketch of new idea](./NewIdeaDrawing.jpg)
+
    It would utilize an Arduino and breadboarding, as well as code likely executed in MatLab. This project is basically a more complex version of a more rudimentary project I created last year that follows the same concept (a musical instrument operated based on the varied detection of light/heat from disparate sources). 
 
-  Here are images of the (very rudimentary) version I created for that project: 
+  Here is an image of the (very rudimentary) version I created for that project: 
  
 
   ![image of initial version](./CompSciFST2021.jpg)
