adding stuff to week 1 page

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -12,7 +12,11 @@
 
   ### Week 1: Introduction 
 
-  Here is an image: 
+  For the first week/class I created the very website you are using, making use of github and the template provided on the class website. 
+
+  I created the About Me page, complete with a succinct description and picture of me.
+
+  I also wrote a VERY preliminary proposal for a final project, which can be viewed on the final project page of the website. 
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
