--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
     <div class="col-sm-4">
       ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
-      [Filler?]
+      [Miscellaneous]
     </div>
   </div>
 
