--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       [Week 13: Final Project](./13_Final_Project/index.html)
     </div>
     <div class="col-sm-4">
-     ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png)
+     ![red orchid image](./RedOrchids.png)
       [About Me](./About_Me/index.html)
     </div>
     <div class="col-sm-4">
