changing picture again

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       [Week 13: Final Project](./13_Final_Project/index.html)
     </div>
     <div class="col-sm-4">
-     ![red orchid image](./RedOrchids.png)
+     ![orange flower image](./OrangeFlower1.jpg)
       [About Me](./About_Me/index.html)
     </div>
     <div class="col-sm-4">
