add new text to the final project page

--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -14,9 +14,9 @@
 
   ### Week 13: Final Project
 
-  For my final project I am considering the following idea: 
+  For my final project I am considering the following ideas: 
 
-  Light/heat operated musical instrument
+  ## 1. Light/heat operated musical instrument
 
   A musical instrument built using photoresistors/thermistors to detect the location of the user's fingers, allowing them to play varied notes without needing to touch an instrument. They would be able to play chords and varying intensities of the notes. The instrument would also be able to change octaves and have a display to show the user what chord/note they are playing. 
 
@@ -30,6 +30,12 @@
  
 
   ![image of initial version](./CompSciFST2021.jpg)
+
+  ## 2. ChoreBot (not the final name)
+
+  A robot equipped with a camera that would scan around the room in which it is placed and recognize undone chores, such as unmade beds, clothes on the floor, etc. This robot would then send out messages over wifi reminding the room's occupant to do their chores. 
+
+  The inspiration for this came from me constantly forgetting to do my chores and wishing I had a apparatus to rmeind me when I forget. 
 
   Click [here](../index.html) to go back to the home page.
 
