--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="col-sm-4">
       ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png)
 
-      [Week 1: Introduction](./01_intro/index.html)
+      [Week 1: Introduction & Documentation](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
       ![white tulip image](./WhiteTulip.jpg) 
