--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -10,7 +10,7 @@
 
 <xmp theme="journal" style="display:none;">
 
-  ### Week 2: 2D Design and Cutting
+# Week 2: 2D Design and Cutting
 
 ##Parametric Press-Fit Design: 
 
