--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -38,7 +38,7 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
 ![second extruded version](./ExtrudedV2)
 
 
-  And here is a	[link](../index.html).
+If you want to return to the main page press [here](../index.html).
 
 
 
