--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       [Week 1: Introduction and Documentation](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      ![white tulip image](./WhiteTulip.jpg) 
+      ![white tulip image](./WhiteTulip.jpg)
+      <style="width:500px;height:600px;">
 
       [Week 2: 2D Design and Cutting](./02_2D_Design_and_Cutting/index.html)
     </div>
