--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="col-sm-4">
       ![white tulip image](./WhiteTulip.jpg)
-      <style="width:500px;height:600px;">
+      <img src="WhiteTulip.jpg" alt="white tulip image" style="width:500px;height:600px;">
 
       [Week 2: 2D Design and Cutting](./02_2D_Design_and_Cutting/index.html)
     </div>
