--- a/index.html
+++ b/index.html
@@ -16,29 +16,28 @@
 
   <div class="row">
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png)
+       <img src="Hydrangea-PNG-Transparent-Picture.png" alt="hydrangea image" style="width:500px;height:600px;">
 
       [Week 1: Introduction and Documentation](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      ![white tulip image](./WhiteTulip.jpg)
       <img src="WhiteTulip.jpg" alt="white tulip image" style="width:500px;height:600px;">
 
       [Week 2: 2D Design and Cutting](./02_2D_Design_and_Cutting/index.html)
     </div>
     <div class="col-sm-4">
-      ![red hydrangea image](./RedHydrangea.png) 
+      <img src="RedHydrangea.png" alt="red hydrangea image" style="width:500px;height:600px;">
       [Week 3: Electronics and Tools](./03_Electronics_and_Tools/index.html)
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-4">
-      ![yellow rose image](./YellowRose.jpg) 
+      <img src="YellowRose.jpg" alt="yellow rose image" style="width:500px;height:600px;"> 
       [Week 4: Microcontroller Programming](./04_Microcontroller_Programming/index.html)
     </div>
-    <div class="col-sm-4">
-      ![blue flowers image](./BlueFlowers.jpg) 
+    <div class="col-sm-4"> 
+       <img src="BlueFlowers.jpg" alt="blue flowers image" style="width:500px;height:600px;"> 
       [Week 5: 3D Design & Printing](./05_3D_Design_and_Printing/index.html)
     </div>
     <div class="col-sm-4">
