--- a/index.html
+++ b/index.html
@@ -37,58 +37,59 @@
       [Week 4: Microcontroller Programming](./04_Microcontroller_Programming/index.html)
     </div>
     <div class="col-sm-4"> 
-       <img src="BlueFlowers.jpg" alt="blue flowers image" style="width:500px;height:600px;"> 
+       <img src="BlueFlowers.jpg" alt="blue flowers image" style="width:350px;height:300px;"> 
       [Week 5: 3D Design & Printing](./05_3D_Design_and_Printing/index.html)
     </div>
     <div class="col-sm-4">
-      ![pink bouquet image](./PinkyBouquet.jpg) 
+      <img src="PinkyBouquet.jpg" alt="pink bouquet image" style="width:350px;height:300px;"> 
       [Week 6: Electronic Input Devices](./06_Electronic_Input_Devices/index.html)
     </div>
   </div>
 
    <div class="row">
     <div class="col-sm-4">
-      ![red flower image](./RedFlowers2X.jpg)
+      <img src="RedFlowers2X.jpg" alt="red flower image" style="width:350px;height:300px;"> 
 
       [Week 7: Electronic Output Devices](./07_Electronic_Output_Devices/index.html)
     </div>
     <div class="col-sm-4">
-      ![ballet pink flower image](./LigtBalletPinkFlower.jpg) 
+      <img src="LigtBalletPinkFlower.jpg" alt="ballet pink flower image" style="width:350px;height:300px;"> 
 
       [Week 8: CNC Milling, Molding & Casting](./08_CNC_Milling,_Molding_&_Casting/index.html)
     </div>
     <div class="col-sm-4">
-      ![striped pink tulip image](./StripyPinkTulip.jpg)  
+      <img src="StripyPinkTulip.jpg" alt="striped pink tulip image" style="width:350px;height:300px;"> 
+
       [Week 9: Radio, WiFi, Bluetooth (IoT)](./09_Radio,_Wifi,_Bluetooth_IoT/index.html)
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-4">
-      ![brown flower image](./BrownFlower.jpg)  
+      <img src="BrownFlower.jpg" alt="brown flower image" style="width:350px;height:300px;">  
       [Week 10: Machine Building and End Effectors](./10_Machine_Building_and_End_Effectors/index.html)
     </div>
     <div class="col-sm-4">
-      ![white rose image](./WhiteRose.png) 
+      <img src="WhiteRose.png" alt="white rose image" style="width:350px;height:300px;">  
       [Week 11: Wildcard, Machines](./11_Wildcard,_Macines/index.html)
     </div>
-    <div class="col-sm-4">
-      ![purple striped tulip image](./WhitePurpleStripedTulip.jpg) 
+    <div class="col-sm-4"> 
+       <img src="WhitePurpleStripedTulip.jpg" alt="purple striped tulip image" style="width:350px;height:300px;">
       [Week 12: Project Prep (lab)](./12_Project_Prep_lab/index.html)
     </div>
   </div>
 
    <div class="row">
     <div class="col-sm-4">
-      ![yellow sunflower image](./YellowSunflower.jpg) 
+       <img src="YellowSunflower.jpg" alt="yellow sunflower image" style="width:350px;height:300px;">
       [Week 13: Final Project](./13_Final_Project/index.html)
     </div>
     <div class="col-sm-4">
-     ![orange flower image](./OrangeFlower1.jpg)
+     <img src="OrangeFlower1.jpg" alt="orange flower image" style="width:350px;height:300px;">
       [About Me](./About_Me/index.html)
     </div>
     <div class="col-sm-4">
-      ![hydrangea image](./Hydrangea-PNG-Transparent-Picture.png) 
+      <img src="Hydrangea-PNG-Transparent-Picture.png" alt="hydrangea image" style="width:350px;height:300px;">
       [Miscellaneous]
     </div>
   </div>
