editing intro page

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -16,11 +16,9 @@
 
   I created the About Me page, complete with a succinct description and picture of me.
 
-  I also wrote a VERY preliminary proposal for a final project, which can be viewed on the final project page of the website. 
+  I also wrote a VERY preliminary proposal for a final project, which can be viewed on the [final project page of the website](../13_Final_Project/index.html). 
 
-  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
-
-  And here is a [link](../index.html). 
+  Click [here](../index.html) if you want to return to the main page. 
 
 
 </xmp>
