--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       [Week 5: 3D Design & Printing](./05_3D_Design_and_Printing/index.html)
     </div>
     <div class="col-sm-4">
-      <img src="PinkyBouquet.jpg" alt="pink bouquet image" style="width:350px;height:300px;"> 
+      <img src="Red-WhiteFlower.jpg" alt="Pink-White flower image" style="width:350px;height:300px;"> 
       [Week 6: Electronic Input Devices](./06_Electronic_Input_Devices/index.html)
     </div>
   </div>
