--- a/About_Me/index.html
+++ b/About_Me/index.html
@@ -16,7 +16,8 @@
 
   Abi Adam is a high school student from Toronto, Canada. She spends her time volunteer tutoring, teaching swimming, lifeguarding, and teaching skiing. However, her real passion is for the physical sciences and broadening the horizons of human knowledge through analysis and investigation. She is a voracious reader, always trying to learn new things and apply what she learns to her daily life. Her hobbies include visual art (drawing, painting, sculpture), creative writing, swimming, skiing, and participating in a wide variety of after-school clubs. Abi loves branching out into new areas and exploring fields totally outside her area of interest, as she really values well-roundedness and is possessed of an insatiable curiosity. She is beyond excited to dive into learning in this class and break out of her comfort zone whilst learning and applying new things in the supportive environment the class provides.  
 
-  <img src="Acc_Picture_of_Me.jpg" alt="picture of me" style="width:350px;height:300px;"> 
+  <img src="Acc_Picture_of_Me.jpg" alt="red flower image" style="width:350px;height:300px;"> 
+    ![picture of me](./Acc_Picture_of_Me.jpg)
 
   If you want to go back to the main page:	[link](../index.html). 
 
