--- a/About_Me/index.html
+++ b/About_Me/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYS-S-12: INTRO TO DIGITAL FABRICATION: About Me </title>
+<title>PHYS-S-12: INTRO TO DIGITAL FABRICATION: About Me </title> [home](../index.html). 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
 
@@ -20,7 +20,7 @@
 
 
 
-  If you want to go back to the main page:  [link](../index.html). 
+  If you want to go back to the main page: [link](../index.html). 
 
   </div>
     <div class="col-sm-6">
