--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -33,12 +33,11 @@ Then I extruded the image (by pressing ‘E’), and set the thickness to the th
 ###Previewing Assembly: 
 Then I went to see what the 3D version would look like, so I opened it and saw that the notch isn’t quite wide enough to accommodate the second hexagon and that the notches were too deep and wouldn’t allow for more than one hexagon to be properly affixed at once. 
 
-![image of 2 assembled hexagons](../AssemblingView)
+<img src="IMG_5675.jpeg" alt="assembled view" style="width:1373px;height:700px;">
 
 So, I changed the thickness of the piece and (attempted to) adjusted the notch length to make it slightly better, but resolved to make some test cuts before setting the new measurements in stone.
 
-![second extruded version](../ExtrudedV2)
-
+<img src="IMG_5676.jpeg" alt="Second extruded version" style="width:1373px;height:700px;">
 
 If you want to return to the main page press [here](../index.html).
 
