--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -12,17 +12,27 @@
 
 # Week 2: 2D Design and Cutting
 
+##Parametric Press-Fit Design: 
+
+<div class="row">
+    <div class="col-sm-6">
+  ###Idea: 
+
+  Hexagonal pieces that will fit together to create a variety of different shapes. My favourite shape, the hexagon, inspired me. I was really excited by the idea of assembling them in 3D space and creating all sorts of other 3D shapes derived from the (mostly) 2D hexagons. 
+<div>
+<div>
+
 <div class="row">
     <div class="col-sm-6">
 
-##Parametric Press-Fit Design: 
-
-###Idea: 
-
-Hexagonal pieces that will fit together to create a variety of different shapes. My favourite shape, the hexagon, inspired me. I was really excited by the idea of assembling them in 3D space and creating all sorts of other 3D shapes derived from the (mostly) 2D hexagons. 
-
 ###Initial Sketches: 
 I chose the ‘hexagon’ option from the ‘create’ drop-down menu, inputted that I wanted 6 sides, and sketched out the lengths. Then I went into the modify tab and created parameters for the notch length, thickness, and kerf (all of which will change when I actually cut the hexagons, and inputting approximate values now just means that the parameters are already ready for me to change at that time). Then I created a rectangle of the length I had previously set in my parameters for the notch depth and of the width thickness - kerf. I then used the ‘circular pattern’ option, also from the create toolbar, to mirror it around the hexagon 3 times, creating symmetric notches.
+ </div>
+<div class="col-sm-6">
+
+  <img src="IMG_5673.jpeg" alt="initial sketch" style="width:500px;height:250px;">
+  </div>
+  </div>
 
 ###Extruded Version: 
 Then I extruded the image (by pressing ‘E’), and set the thickness to the thickness parameter I had set previously. Then I added filets (by selecting the filet button and then selecting the inner edges).
