--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -16,7 +16,7 @@
 
 <div class="row">
     <div class="col-sm-6">
-  ###Idea: 
+  <subtitle>Idea:<subtitle> 
 
   Hexagonal pieces that will fit together to create a variety of different shapes. My favourite shape, the hexagon, inspired me. I was really excited by the idea of assembling them in 3D space and creating all sorts of other 3D shapes derived from the (mostly) 2D hexagons. 
 </div>
