--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -16,16 +16,21 @@
 
 <div class="row">
     <div class="col-sm-6">
-  <subtitle>Idea:<subtitle> 
+  Idea:
 
   Hexagonal pieces that will fit together to create a variety of different shapes. My favourite shape, the hexagon, inspired me. I was really excited by the idea of assembling them in 3D space and creating all sorts of other 3D shapes derived from the (mostly) 2D hexagons. 
+
+
 </div>
 </div>
 
 <div class="row">
     <div class="col-sm-6">
-###Initial Sketches: 
+Initial Sketches: 
+
 I chose the ‘hexagon’ option from the ‘create’ drop-down menu, inputted that I wanted 6 sides, and sketched out the lengths. Then I went into the modify tab and created parameters for the notch length, thickness, and kerf (all of which will change when I actually cut the hexagons, and inputting approximate values now just means that the parameters are already ready for me to change at that time). Then I created a rectangle of the length I had previously set in my parameters for the notch depth and of the width thickness - kerf. I then used the ‘circular pattern’ option, also from the create toolbar, to mirror it around the hexagon 3 times, creating symmetric notches.
+
+
  </div>
 <div class="col-sm-6">
 
@@ -33,13 +38,51 @@ I chose the ‘hexagon’ option from the ‘create’ drop-down menu, inputted 
   </div>
   </div>
 
-###Extruded Version: 
+<div class="row">
+    <div class="col-sm-6">
+Extruded Version: 
+
 Then I extruded the image (by pressing ‘E’), and set the thickness to the thickness parameter I had set previously. Then I added filets (by selecting the filet button and then selecting the inner edges).
 
-###Previewing Assembly: 
-Then I went to see what the 3D version would look like, so I opened it and saw that the notch isn’t quite wide enough to accommodate the second hexagon and that the notches were too deep and wouldn’t allow for more than one hexagon to be properly affixed at once. So, I changed the thickness of the piece and (attempted to) adjusted the notch length to make it slightly better, but resolved to make some test cuts before setting the new measurements in stone.
+</div>
+<div class="col-sm-6">
+
+  <img src="IMG_5674.jpeg" alt="extruded version" style="width:500px;height:250px;">
+</div>
+  </div>
+
+<div class="row">
+    <div class="col-sm-6">
+Previewing Assembly: 
+
+Then I went to see what the 3D version would look like, so I opened it and saw that the notch isn’t quite wide enough to accommodate the second hexagon and that the notches were too deep and wouldn’t allow for more than one hexagon to be properly affixed at once.
+
+ </div>
+<div class="col-sm-6">
+
+<img src="IMG_5675.jpeg" alt="assembled view" style="width:500px;height:250px;">
+
+  </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-6"> 
+
+So, I changed the thickness of the piece and (attempted to) adjusted the notch length to make it slightly better, but resolved to make some test cuts before setting the new measurements in stone.
 
 If you want to return to the main page press [here](../index.html).
+
+ </div>
+<div class="col-sm-6">
+
+<img src="IMG_5676.jpeg" alt="Second extruded version" style="width:500px;height:250px;">
+
+  </div>
+  </div>
+
+
+
+
 
 
 </div>
