--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -19,7 +19,8 @@
   Idea:
 
   Hexagonal pieces that will fit together to create a variety of different shapes. My favourite shape, the hexagon, inspired me. I was really excited by the idea of assembling them in 3D space and creating all sorts of other 3D shapes derived from the (mostly) 2D hexagons. 
-
+  
+extra &nbsp;&nbsp; space
 
 </div>
 </div>
@@ -80,32 +81,6 @@ If you want to return to the main page press [here](../index.html).
   </div>
   </div>
 
-
-
-
-
-
-</div>
-
-<div class="col-sm-6">
-
-  <img src="IMG_5673.jpeg" alt="initial sketch" style="width:500px;height:250px;">
-
-
- <img src="IMG_5674.jpeg" alt="extruded version" style="width:500px;height:250px;">
-
-
-
-<img src="IMG_5675.jpeg" alt="assembled view" style="width:500px;height:250px;">
-
-
-
-<img src="IMG_5676.jpeg" alt="Second extruded version" style="width:500px;height:250px;">
-
-</div>
-
-
-  
 
 
 
