--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -17,7 +17,7 @@
 <div class="row">
     <div class="col-sm-6">
 
-      <p style="margin-left: 2.5em;padding: 0 7em 2em 0;">
+      <p style="padding: 0 7em 2em 0;">
 
   Idea:
 
