--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -103,11 +103,13 @@ If you want to return to the main page press [here](../index.html).
 
 I chose the eraser because it is a constant in any workspace and can be effectively modeled in 2D. 
 
-To the left are the eraser I was modeling and the model I created.</p>
+To the right are the eraser I was modeling and the model I created.</p>
  </div>
 
 <div class="col-sm-6">
-  <img src="IMG_5673.jpeg" alt="initial sketch" style="width:500px;height:250px;">
+  <img src="EraserImage.jpeg" alt="eraser 3D model" style="width:500px;height:250px;">
+
+  <img src="EraserPicture.jpeg" alt="eraser picture" style="width:500px;height:250px;">
   </div>
   </div>
 
@@ -120,11 +122,11 @@ Object 2: Headband
 
 I chose the headband because it is an arc and thus a different shape than what I had modelled previously. 
 
-To the left is the image of the model headband I created. </p>
+To the right is the image of the model headband I created. </p>
  </div>
 
 <div class="col-sm-6">
-  <img src="IMG_5673.jpeg" alt="initial sketch" style="width:500px;height:250px;">
+  <img src="HeadbandImage.jpeg" alt="headband 3D model" style="width:500px;height:250px;">
   </div>
   </div>
 
