--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -109,7 +109,7 @@ To the right are the eraser I was modeling and the model I created.</p>
 <div class="col-sm-6">
   <img src="EraserImage.jpeg" alt="eraser 3D model" style="width:500px;height:250px;">
 
-  <img src="EraserPicture.jpeg" alt="eraser picture" style="width:500px;height:250px;">
+  <img src="eraserrealpicture.jpeg" alt="eraser picture" style="width:500px;height:250px;">
   </div>
   </div>
 
