--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -118,7 +118,7 @@ To the right are the eraser I was modeling and the model I created.</p>
 
       Object 2: Headband
 
-      <p style="padding: 0 2em 2em 0;">
+      <p style="padding: 2 em 2em 0;">
 
   I chose the headband because it is an arc and thus a different shape than what I had modelled previously. 
 
