--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -116,9 +116,10 @@ To the right are the eraser I was modeling and the model I created.</p>
   <div class="row">
     <div class="col-sm-6">
 
-      Object 2: Headband
+      <p style="padding: 0 em 2em 0;">
 
-      <p style="padding: 2 em 2em 0;">
+  Object 2: Headband<br>
+  <br>
 
   I chose the headband because it is an arc and thus a different shape than what I had modelled previously. 
 
