--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -19,7 +19,8 @@
 
       <p style="padding: 0 0em 2em 0;">
 
- Idea:
+ Idea:<br>
+  <br>
 
   Hexagonal pieces that will fit together to create a variety of different shapes. My favourite shape, the hexagon, inspired me. I was really excited by the idea of assembling them in 3D space and creating all sorts of other 3D shapes derived from the (mostly) 2D hexagons. </p>
   
@@ -32,7 +33,8 @@
 
       <p style="padding: 0 0em 2em 0;">
 
-Initial Sketches: 
+Initial Sketches:<br>
+  <br> 
 
 I chose the ‘polygon’ option from the ‘create’ drop-down menu, inputted that I wanted 6 sides, and sketched out the lengths. Then I went into the modify tab and created parameters for the notch length, thickness, and kerf (all of which will change when I actually cut the hexagons, and inputting approximate values now just means that the parameters are already ready for me to change at that time). Then I created a rectangle of the length I had previously set in my parameters for the notch depth and of the width thickness - kerf. I then used the ‘circular pattern’ option, also from the create toolbar, to mirror it around the hexagon 3 times, creating symmetric notches. </p>
 
@@ -49,7 +51,8 @@ I chose the ‘polygon’ option from the ‘create’ drop-down menu, inputted 
 
       <p style="padding: 0 0em 2em 0;">
 
-Extruded Version: 
+Extruded Version:<br>
+  <br> 
 
 Then I extruded the image (by pressing ‘E’), and set the thickness to the thickness parameter I had set previously. Then I added filets (by selecting the filet button and then selecting the inner edges). </p>
 
@@ -65,7 +68,8 @@ Then I extruded the image (by pressing ‘E’), and set the thickness to the th
 
       <p style="padding: 0 0em 2em 0;">
 
-Previewing Assembly: 
+Previewing Assembly:<br>
+  <br> 
 
 Then I went to see what the 3D version would look like, so I opened it and saw that the notch isn’t quite wide enough to accommodate the second hexagon and that the notches were too deep and wouldn’t allow for more than one hexagon to be properly affixed at once. </p>
 
@@ -99,7 +103,8 @@ If you want to return to the main page press [here](../index.html).
     <div class="col-sm-6">
 
       <p style="padding: 0 0em 2em 0;">
- Object 1: Eraser
+ Object 1: Eraser<br>
+  <br>
 
 I chose the eraser because it is a constant in any workspace and can be effectively modeled in 2D. 
 
