--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -5,6 +5,8 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
 
+  [home](../index.html).
+
 <body>
 
 
@@ -86,8 +88,6 @@ Then I went to see what the 3D version would look like, so I opened it and saw t
     <div class="col-sm-6"> 
 
 So, I changed the thickness of the piece and (attempted to) adjusted the notch length to make it slightly better, but resolved to make some test cuts before setting the new measurements in stone.
-
-If you want to return to the main page press [here](../index.html).
 
  </div>
 <div class="col-sm-6">
