--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -9,7 +9,9 @@
 
 
 <xmp theme="journal" style="display:none;">
-  [home](../index.html).
+
+
+  [home](../index.html)
 
 # Week 2: 2D Design and Cutting
 
