--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -14,7 +14,7 @@
 
   For the first week/class I created the very website you are using, making use of github and the template provided on the class website. 
 
-  I created the [About Me]../About_Me/index.html) page, complete with a succinct description and picture of me.
+  I created the [About Me](../About_Me/index.html) page, complete with a succinct description and picture of me.
 
   I also wrote a VERY preliminary proposal for a final project, which can be viewed on the [final project page of the website](../13_Final_Project/index.html). 
 
