--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -35,7 +35,7 @@
 
   A robot equipped with a camera that would scan around the room in which it is placed and recognize undone chores, such as unmade beds, clothes on the floor, etc. This robot would then send out messages over wifi reminding the room's occupant to do their chores. 
 
-  The inspiration for this came from me constantly forgetting to do my chores and wishing I had a apparatus to rmeind me when I forget. 
+  The inspiration for this came from me constantly forgetting to do my chores and wishing I had a apparatus to remind me when I forget. 
 
   Click [here](../index.html) to go back to the home page.
 
