--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -15,7 +15,7 @@
 
 # Week 2: 2D Design and Cutting
 
-##Parametric Press-Fit Design: 
+## A. Parametric Press-Fit Design: 
 
 <div class="row">
     <div class="col-sm-6">
@@ -98,7 +98,7 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
   </div>
   </div>
 
-##Second Half: Modelling Household Items
+##B. Modelling Household Items
 
 <div class="row">
     <div class="col-sm-6">
