adding household objects

--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -109,13 +109,15 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
 
 I chose the eraser because it is a constant in any workspace and can be effectively modeled in 2D. 
 
-To the right are the eraser I was modeling and the model I created.</p>
+I intitially created a rectangular sketch, and then used filets of varying sides on either end to match the dimensions of my eraser.
+
+To the right are the eraser I was modeling and the model I created, including the parameters (measurements done of the eraser with calipers). </p>
  </div>
 
 <div class="col-sm-6">
-  <img src="EraserImage.jpeg" alt="eraser 3D model" style="width:500px;height:250px;">
+  <img src="EraserWithParameters.jpeg" alt="eraser 3D model" style="width:500px;height:250px;">
 
-  <img src="eraserrealpicture.jpeg" alt="eraser picture" style="width:500px;height:250px;">
+  <img src="IMG_5704.jpeg" alt="eraser picture" style="width:500px;height:250px;">
   </div>
   </div>
 
@@ -124,16 +126,22 @@ To the right are the eraser I was modeling and the model I created.</p>
 
       <p style="padding: 0 em 2em 0;">
 
-  Object 2: Headband<br>
+  Object 2: Gluestick<br>
   <br>
 
-  I chose the headband because it is an arc and thus a different shape than what I had modelled previously. 
+  I chose the gluestick because it is composed of different components of geometries altered from the ones created by default. 
 
-  To the right is the image of the model headband I created. </p>
+In making it, I created each cyllindrical section individually and used the 'create circular pattern' to reflect the indents in the citrcumfrence of the respective circles before extruding them. 
+
+Then I turned each of the bodies into components, at which point I copied and pasted them into a new file and assembled them, as you see in the final image. 
+
+
+  To the right is the image of the model gluestick and the actual gluestick. </p>
    </div>
 
 <div class="col-sm-6">
-  <img src="HeadbandImage.jpeg" alt="headband 3D model" style="width:500px;height:250px;">
+  <img src="IMG_5705.jpeg" alt="gluestick image" style="width:500px;height:250px;">
+  <img src="Gluestick3Dmodel.jpeg" alt="gluestick 3D model" style="width:500px;height:250px;">
   </div>
   </div>
 
