adding info about first cut

--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -98,6 +98,8 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
   </div>
   </div>
 
+
+
 ##B. Modelling Household Items
 
 <div class="row">
@@ -146,7 +148,24 @@ Then I turned each of the bodies into components, at which point I copied and pa
   </div>
 
 
- 
+-------
+  First Cut: <br>
+  <br>
+
+  The first cut was mostly a sucess, with my kerf measurements ending up being suprisingly accurate! About a milimeter was an accurate prediction, which I verified. 
+  <br>
+  As predicted, the notches were too long and so I traced around to find the ideal length. Then I changed the length in my original file and got ready to recut!
+  <br>
+  To the right are images of the hexagons
+
+   </p>
+   </div>
+
+<div class="col-sm-6">
+  <img src="IMG_5685.jpeg" alt="side by side" style="width:500px;height:375px;">
+  <img src="IMG_5686.jpeg" alt="together, with markings" style="width:500px;height:375px;">
+  </div>
+  </div> 
 
 
 
