--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -122,7 +122,7 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
   As predicted, the notches were too long and so I traced around to find the ideal length. Then I changed the length in my original file and got ready to recut!
   <br>
   <br>
-  To the right are images of the hexagons
+  To the right are images of the hexagons. 
 
    </p>
    </div>
@@ -145,9 +145,11 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
   <br>
 
 I chose the eraser because it is a constant in any workspace and can be effectively modeled in 2D. 
-
+<br>
+  <br>
 I intitially created a rectangular sketch, and then used filets of varying sides on either end to match the dimensions of my eraser.
-
+<br>
+  <br>
 To the right are the eraser I was modeling and the model I created, including the parameters (measurements done of the eraser with calipers). </p>
  </div>
 
@@ -170,12 +172,14 @@ To the right are the eraser I was modeling and the model I created, including th
   <br>
 
   I chose the gluestick because it is composed of different components of geometries altered from the ones created by default. 
-
+<br>
+  <br>
 In making it, I created each cyllindrical section individually and used the 'create circular pattern' to reflect the indents in the citrcumfrence of the respective circles before extruding them. 
-
+<br>
+  <br>
 Then I turned each of the bodies into components, at which point I copied and pasted them into a new file and assembled them, as you see in the final image. 
-
-
+<br>
+  <br>
   To the right is the image of the model gluestick and the actual gluestick. </p>
    </div>
 
