--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -135,6 +135,33 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
 
 -------
 
+<div class="row">
+    <div class="col-sm-6">
+
+      <p style="padding: 0 0em 2em 0;">
+
+  Second Cut: <br>
+  <br>
+
+  The second cut was a success! I ended only printed 2 again, because I didn't know if it would work in the end. 
+  <br>
+  <br>
+  The notches were the perfect size this time, as shown in the images with the green pen marks showing where the hexagons can be placed, without interfering with each other. 
+  <br>
+  <br>
+  To the right are images of the new hexagons. 
+
+   </p>
+   </div>
+
+<div class="col-sm-6">
+  <img src="IMG_5687.jpeg" alt="marked up to show hexagon placement" style="width:500px;height:375px;">
+  <img src="IMG_5688.jpeg" alt="together, with markings" style="width:500px;height:375px;">
+  </div>
+  </div> 
+
+  -------
+
 ##B. Modelling Household Items
 
 <div class="row">
