--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -162,6 +162,28 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
 
   -------
 
+  <div class="row">
+
+  Final Cut: <br>
+  <br>
+
+  I printed the same shapes as the second cut, ending up with 10 total hexagons. 
+  <br>
+  <br>
+  In the images you can see the shapes made by 4 hexagons, and then the ones made by all 10. These shapes can be rearranged to create a whole variety of differing arrangements according to the user's discretion.  
+  <br>
+  <br>
+  To the right are images of the arranged and finished hexagons! 
+
+   </p>
+
+  <img src="IMG_5703.jpeg" alt="10 hexagons 1" style="width:1356.5px;height:1081.5px;">
+  <img src="IMG_5688.jpeg" alt="together, with markings" style="width:375px;height:500px;">
+  </div>
+  
+
+  -------
+
 ##B. Modelling Household Items
 
 <div class="row">
