--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -178,7 +178,11 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
    </p>
 
   <img src="IMG_5703.jpeg" alt="10 hexagons 1" style="width:339px;height:270px;">
-  <img src="IMG_5688.jpeg" alt="together, with markings" style="width:339px;height:270px;">
+  <img src="IMG_5700.jpeg" alt="10 hexagons 1" style="width:339px;height:270px;">
+  <img src="IMG_5692.jpeg" alt="3 hexagons" style="width:339px;height:270px;">
+  <img src="IMG_5702.jpeg" alt="3 hexagons" style="width:339px;height:270px;">
+
+
   </div>
   
 
