--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -239,6 +239,62 @@ Then I turned each of the bodies into components, at which point I copied and pa
   </div>
   </div>
 
+-------
+
+
+##C. Tutorial Documentation
+
+<div class="row">
+    <div class="col-sm-6">
+
+      <p style="padding: 0 0em 2em 0;">
+
+Made a closed shape using the line function, learned to assign dimensions to shapes in a new way
+- by using the drop down menu/'d' shortcut as opposed to double clicking the line or using parameters
+
+</p>
+
+ </div>
+<div class="col-sm-6">
+
+<img src="Shape1.jpeg" alt="first shape" style="width:500px;height:250px;">
+
+  </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-6">
+
+      <p style="padding: 0 0em 2em 0;">
+
+Made circles and learned how to use the constraints- tangent, coincident
+
+</p>
+
+ </div>
+<div class="col-sm-6">
+
+<img src="CirclesAndLines.jpeg" alt="circles with lines" style="width:500px;height:250px;">
+
+  </div>
+  </div>
+
+ <div class="row">
+    <div class="col-sm-6">
+
+      <p style="padding: 0 0em 2em 0;">
+
+Made ellipse, using the elipse tool in the 'create' drop down menu. 
+
+</p>
+
+ </div>
+<div class="col-sm-6">
+
+<img src="Ellipse.jpeg" alt="ellipse" style="width:500px;height:250px;">
+
+  </div>
+  </div>
 
 
 
